# streaming-player

./: .gitignore  CMakeLists.txt
core/common/: abr.h  buffer_strategy.h  clock.h  frame_queue.h  log.h  packet_queue.h  stats.h
core/decoder/: decoder.h  decoder_factory.h  hw_decoder.h  i_decoder.h  soft_decoder.h
core/demuxer/: demuxer.h
core/player/: player.h
core/render/: audio_render.h  debug_hud.h  gl_render.h  subtitle_render.h  video_render.h
platform/android/app/: build.gradle
platform/android/app/src/main/cpp/: CMakeLists.txt  native_player.cpp
platform/android/app/src/main/java/com/sp/player/: NativePlayer.java  PlayerActivity.java
platform/android/app/src/main/res/layout/: activity_player.xml
platform/desktop/: CMakeLists.txt  main.cpp
platform/ios/StreamingPlayer/: SPPlayer.h  SPPlayer.mm  ViewController.m
platform/web/: CMakeLists.txt  index.html  player_wasm.cpp
server/: docker-compose.yml
server/srs/: srs.conf
tools/: pull_test.sh  push_stream.sh  start_hls_server.sh
